[package]
name = "super-antenna"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.26.2"
futures-util = "0.3.31"
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.17"
prometheus = "0.14.0"
warp = "0.3.7"